@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-24T00:26:23Z",
-  "count_outdated" : 1449,
-  "uniques_outdated" : 358,
+  "timestamp" : "2022-04-24T08:07:26Z",
+  "count_outdated" : 1450,
+  "uniques_outdated" : 359,
   "count" : 1476,
   "uniques" : 376,
   "clones" : [
-    {
-      "timestamp": "2022-04-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-11T00:00:00Z",
       "count": 2,
