@@ -1,3 +1,9 @@
+2022-04-24T08:07:26Z:
+* notice: last 14d: all unq: 26 9
+* notice: prev accum: outdated-all outdated-unq / all unq: 1449 358 / 1476 376
+* notice: next accum: outdated-all outdated-unq / all unq: 1450 359 / 1476 376
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-24T00:26:23Z:
 * notice: last 14d: all unq: 27 9
 * notice: prev accum: outdated-all outdated-unq / all unq: 1447 356 / 1475 375
